[package]
name = "clicklauncher"
version = "0.2.0"
authors = ["nilninull <nilninull@gmail.com>"]
edition = "2018"
description = "Launcher that switches programs according to the number of executions"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
clap = "2.33.3"
dirs = "3.0.1"
raw_sync = "0.1.5"
shared_memory = "0.11.4"
